--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ missing-const-for-fn = "deny"
 
 
 [dependencies]
-nu-ansi-term = "0.50.0"
-regex = "1.10.4"
+nu-ansi-term = "0.50.1"
+regex = "1.10.5"
+once_cell = "1.19.0"
