Add new dependencies to Cargo.lock and update JSON highlighter
- Include `equivalent`, `hashbrown`, `indexmap` in Cargo.lock
- Modify `serde_json` dependency to use `preserve_order` feature
- Remove unnecessary whitespace from JSON highlighter output
- Update JSON highlighter test cases with new example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ missing-const-for-fn = "deny"
 [dependencies]
 nu-ansi-term = "0.50.1"
 regex = "1.10.6"
-serde_json = "1.0.128"
+serde_json = { version = "1.0.128", features = ["preserve_order"] }
